# surfpack

./: AUTHORS  CMakeLists.txt  COPYRIGHT  INSTALL  Makefile  Makefile.am  README  acinclude.m4  bootstrap  configure.ac  openAll  setpath  setup  surfpack_config.h.cmake.in
cmake/: surfpack_config.h.in
docs/: Dev_Main.dox  DoxygenConfig  Makefile.am  README_Surfpack_Manual  alltogether.spk  axesandgrid.txt  conventions.txt  createsurface.txt  createsurface2.txt  crime.txt  cubic_poly_timing.txt  cubicpoly.spk  evaluate.txt  evaluate2.txt  example.txt  fitness.txt  fitness2.txt  fitness3.txt  griddata.txt  holdout.txt  kriging_times_50to3000.txt  latex2pdfInstructions  loaddata.txt  mcdata.txt  montecarlo.txt  reuse.spk  sampledata.txt  save.txt  simple7.txt  surfpack_users_manual.bib  surfpack_users_manual.tex  test_timing_data.txt  testset.txt  testtimingdatasnippet.txt  timing_data_3050.txt  timingdata.spk  timingdataevalandsave.spk  timingdatafitness.spk
examples/: README  annscript  bigdef  cdef  diffplot.m  fpt  krigscript  marsscript  mkriging.txt  mrbf.txt  poly1.txt  polyscript  rast100.txt  rbfscript  rose100.txt  samp5.txt  small.txt  smallset.txt  snapshot.m  sphere100.txt  sptest  surfscript  survey.m  tdef  testPtDef2D
gui/: firstswig.cxx  firstswig.h  mymake  plotter.py  spgui.cpp
interface/: CMakeLists.txt  Makefile.am  SurfDataGenerator.cpp  SurfDataGenerator.h  datawriter.cpp  drivmain.cpp  main.cpp  polybench.cpp
m4/: acx_blas.m4  acx_build_standalone.m4  acx_cxx_using_gcc.m4  acx_lapack.m4  ax_cflags_osf_option.m4  mdr_cppunit_makefile.m4  mdr_cxx_cppunit.m4  surfpack_packages.m4
share/: claimsTooMany.sd  claimsTooMany.txt  point2.sp  point2.txt  (+2 more)
src/: AxesBounds.cpp  AxesBounds.h  CMakeLists.txt  Conmin.h  Makefile.am  MersenneTwister.h  ModelFactory.cpp  ModelFactory.h  ModelFitness.cpp  ModelFitness.h  PointDefinition.cpp  PointDefinition.h  SurfData.cpp  SurfData.h  SurfException.h  SurfPoint.cpp  SurfPoint.h  SurfScaler.cpp  SurfScaler.h  Surface.cpp  Surface.h  SurfaceFactory.cpp  SurfaceFactory.h  SurfpackInterface.cpp  SurfpackInterface.h  SurfpackMatrix.h  SurfpackMatrix.tpl  SurfpackParserArgs.cpp  SurfpackParserArgs.h  surfpack.cpp  surfpack.h  surfpack_LAPACK_wrappers.h  surfpack_c_interface.cpp  surfpack_system_headers.h
src/ann/: Makefile.am  allocate.C  allocate.cpp  allocate.h  ann.C  ann.cpp  ann.h  client.C  client.cpp  convert.C  convert.cpp  convert.h  dsvd2.C  dsvd2.c  dsvd2.cpp  dsvd2.h  gen_drno.C  gen_drno.cpp  gen_drno.h  random.C  random.cpp  random.h  system_defs.h  utilities.C  utilities.cpp  utilities.h  vector_enhancements.c  vector_enhancements.cpp  vector_enhancements.h
src/conmin/: Makefile.am  conmin.f
src/interpreter/: CMakeLists.txt  FlexWrapper.cpp  FlexWrapper.h  Makefile.am  SurfpackInterpreter.cpp  SurfpackInterpreter.h  SurfpackParser.cpp  SurfpackParser.h  SurfpackParserArgs.cpp  SurfpackParserArgs.h  fab  lex.yy.cpp  lexer.c  lexer.l  lexer.lex  lexer.lpp  surfparse.tab.cpp  surfparse.tab.h  surfparse.y  surfparse.ypp
src/iterators/: AbstractSurfDataIterator.cpp  AbstractSurfDataIterator.h  SkipSurfDataIterator.cpp  SkipSurfDataIterator.h  SurfDataIterator.cpp  SurfDataIterator.h
src/kriging/: Makefile.am  cpp_f77_conmin_cntl.f  cpp_f77_dotcntl.f  krig_model.f
src/lapack/: Makefile.am  dgecon.f  dgelq2.f  dgelqf.f  dgels.f  dgeqr2.f  dgeqrf.f  dgerq2.f  dgerqf.f  dgetf2.f  dgetrf.f  dgetri.f  dgglse.f  dggrqf.f  dlabad.f  dlacon.f  dlamch.f  dlange.f  dlapy2.f  dlarf.f  dlarfb.f  dlarfg.f  dlarft.f  dlascl.f  dlaset.f  dlassq.f  dlaswp.f  dlatrs.f  dorm2r.f  dorml2.f  dormlq.f  dormqr.f  dormr2.f  dormrq.f  drscl.f  dtrti2.f  dtrtri.f  ieeeck.f  ilaenv.f  lsame.f  (+1 more)
src/mars/: CMakeLists.txt  Makefile.am  mars36_fort.f  mars36_sample.f
src/surfaces/: ANNSurface.cpp  ANNSurface.h  CMakeLists.txt  DirectANNModel.cpp  DirectANNModel.h  KrigingCPPSurface.cpp  KrigingCPPSurface.h  KrigingModel.cpp  KrigingModel.h  KrigingSurface.cpp  KrigingSurface.h  LinearRegressionModel.cpp  LinearRegressionModel.h  Makefile.am  MarsModel.cpp  MarsModel.h  MarsSurface.cpp  MarsSurface.h  MarsValidator.cpp  MarsValidator.h  ModelScaler.cpp  ModelScaler.h  MovingLeastSquaresModel.cpp  MovingLeastSquaresModel.h  PolynomialSurface.cpp  PolynomialSurface.h  RBFNetSurface.cpp  RBFNetSurface.h  RadialBasisFunctionModel.cpp  RadialBasisFunctionModel.h  SurfpackModel.cpp  SurfpackModel.h  least_squares_omp.cpp
src/surfaces/nkm/: CMakeLists.txt  Makefile.am  NKM_BlockPivotChol.f  NKM_GradKrigingModel.cpp  NKM_GradKrigingModel.hpp  NKM_KrigingModel.cpp  NKM_KrigingModel.hpp  NKM_LinearRegressionModel.cpp  NKM_LinearRegressionModel.hpp  NKM_Optimize.cpp  NKM_Optimize.hpp  NKM_PivotChol.f  NKM_SurfData.cpp  NKM_SurfData.hpp  NKM_SurfMat.cpp  NKM_SurfMat.hpp  NKM_SurfMat_Native.hpp  NKM_SurfPack.cpp  NKM_SurfPack.hpp  NKM_SurfPackModel.hpp  NKM_TestMain.cpp  NKM_ValidateMain.cpp
src/surfaces/surfaceComponents/: BackpropMLP.cpp  BackpropMLP.h  MultiLayerPerceptron.cpp  MultiLayerPerceptron.h  ParticleSwarmMLP.cpp  ParticleSwarmMLP.h
system_tests/instances/: Makefile.am  isolateann.spk  kriging.spk  ktimes.spk  mtopo.spk  newargs.spk  rtopo.spk  sensor.spk  stopo.spk  test001.spk  test002.spk  test003.spk  test004.spk  test005.spk  test006.spk  test007.spk  test008.spk  test009.spk  test010.spk  time_krig_builds.cpp  topo.spk  update
tests/: KrigingModelTest.cpp  KrigingModelTest.h  LinearRegressionModelTest.cpp  LinearRegressionModelTest.h  Makefile.am  ModelFactoryTest.cpp  ModelFactoryTest.h  ModelScalerTest.cpp  ModelScalerTest.h  MovingLeastSquaresTest.cpp  MovingLeastSquaresTest.h  PolynomialSurfaceTest.cpp  PolynomialSurfaceTest.h  RadialBasisFunctionTest.cpp  RadialBasisFunctionTest.h  SurfDataTest.cpp  SurfDataTest.h  SurfPointTest.cpp  SurfPointTest.h  SurfScalerTest.cpp  SurfScalerTest.h  SurfaceTest.cpp  SurfaceTest.h  SurfpackCommonTest.cpp  SurfpackCommonTest.h  SurfpackModelTest.cpp  SurfpackModelTest.h  srftestmain.cpp  unittests.cpp  unittests.h
tests/SaveLoad/: ccd_load.spk  ccd_save.spk  testsaveload.sh
(+56 files in other folders)
