if INCLUDE_TESTS
SUBDIRS = src interface tests
else
SUBDIRS = src interface 
endif
EXTRA_DIST = $(top_srcdir)/examples/*
#DISTCLEANFILES = $(top_builddir)/share/*.txt $(top_builddir)/share/*.sp $(top_builddir)/share/*.sd
#data_DATA = $(top_srcdir)/share/*.txt $(top_srcdir)/share/*.sp $(top_srcdir)/share/*.sd
